# mcp-tutorial

./: README.md  pyproject.toml
learning/01-hello-world/: server.py  server_with_resources.py
learning/02-mcp-client/: client.py  interactive_client.py
learning/03-output-schema/: client.py  server.py
learning/04-prompts/: client.py  server.py
learning/05-transports/: client_sse.http  client_sse.py  client_streamable.http  server.py
learning/06-auth/basic-design/: server.py
learning/06-auth/oauth/: client.py  server.py
learning/06-auth/oauth-full-design/: README.md  client.py  mcp_resource_server.py  oauth_provider.py
learning/07-pytest/: test_calculator_server.py
learning/08-integrations/: client.http  client.py  langgraph_agent.py  server.py
